--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -242,6 +242,7 @@
 /scripts/elf_helper.py                    @andrewboie
 /scripts/sanity_chk/expr_parser.py        @andrewboie @nashif
 /scripts/gen_app_partitions.py            @andrewboie
+/scripts/partition_manager.py             @SebastianBoe
 /arch/x86/gen_gdt.py                      @andrewboie
 /arch/x86/gen_idt.py                      @andrewboie
 /scripts/gen_kobject_list.py              @andrewboie
