dump, started on pm.yml in app context
Signed-off-by: Håkon Øye Amundsen <haakon.amundsen@nordicsemi.no>

--- a/samples/mcuboot/prj.conf
+++ b/samples/mcuboot/prj.conf
@@ -1,1 +1,8 @@
 CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_MCUBOOT_BUILD_STRATEGY_USE_HEX_FILE=y
+CONFIG_MCUBOOT_BUILD_STRATEGY_PLACEMENT="before-spm"
+CONFIG_MCUBOOT_HEX_FILE="/home/haam/lol.hex"
+#CONFIG_SPM_BUILD_STRATEGY_SKIP_BUILD=y
+#CONFIG_SPM_BUILD_STRATEGY_SKIP_ADDRESS=0xc200
+#CONFIG_SPM_BUILD_STRATEGY_SKIP_SIZE=0x8000
+#CONFIG_SPM_BUILD_STRATEGY_PLACEMENT="before-app"
